primer cambio de el codigo

--- a/proyecto Graphel/Index.html
+++ b/proyecto Graphel/Index.html
@@ -14,11 +14,20 @@
             <button class="3">"SERVICIOS"</button>
             <button class="4">"CONTACTOS"</button>
         </header>
-        <section>
+        <section class="primer section">
             <h2>
                 EXPERTOS EN TECNOLOGIAS WEB
             </h2>
-            <h3> texto de relleno el cual va abajo del h2 en el sectio 1</h3>
+            <h3> texto de relleno el cual va abajo del h2 en el sectio 1 aunque no se como dividirlo y linkearlo sin que explote el codigo jajajaja qwq</h3>
+        </section>
+        <section class="segundo section">
+            <h2>inscribete a nuestro Boletin</h2>
+            <label for="email">Ingrese el Email</label>
+            <input type="email" id="email" pattern=".+@example\.com" size="20" required />
+            <button class="boton gmail">Subscribete</button>
+        </section>
+        <section class="tercer section ">
+        <img src="/images/logo_html.png" alt="logo_html">
         </section>
     </main>
 </body>
