mejora de la pagina

--- a/proyecto Graphel/Index.html
+++ b/proyecto Graphel/Index.html
@@ -28,6 +28,13 @@
         </section>
         <section class="tercer section ">
         <img src="/images/logo_html.png" alt="logo_html">
+        <h3>texto que va abajo del html </h3>
+
+        <img src="/images/logo_css.png" alt="logo_css">
+        <h3>texto que va abajo del logo de css</h3>
+
+        <img src="/images/logo_brush.png" alt="logo_brush">
+        <h3>texto que va abajo del logo de brush</h3>
         </section>
     </main>
 </body>
