ultimo minuto de la clase

--- a/proyecto Graphel/Index.html
+++ b/proyecto Graphel/Index.html
@@ -3,30 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Styles/Index.css">
     <title>DiseñoMultimedia.com</title>
 </head>
 <body>
     <main>
-        <header>
+        <header class="container">
             <h1> Diseño Multimedia </h1> 
-            <button class="1">"INICIO"</button> 
-            <button class="2">"NOSOTROS"</button> 
-            <button class="3">"SERVICIOS"</button>
-            <button class="4">"CONTACTOS"</button>
+          <nav>
+            <ul>
+                <li><a class="a1vank" href="/Index.html">holaaa</a></li>
+                <li><a href="">hola</a></li>
+                <li><a href="">salud</a></li>
+                <li><a href="">hijueputa</a></li>
+            </ul>
+          </nav>
         </header>
-        <section class="primer section">
+        <section class="primer_section">
             <h2>
                 EXPERTOS EN TECNOLOGIAS WEB
             </h2>
             <h3> texto de relleno el cual va abajo del h2 en el sectio 1 aunque no se como dividirlo y linkearlo sin que explote el codigo jajajaja qwq</h3>
         </section>
-        <section class="segundo section">
+        <section class="segundo_section">
             <h2>inscribete a nuestro Boletin</h2>
             <label for="email">Ingrese el Email</label>
             <input type="email" id="email" pattern=".+@example\.com" size="20" required />
-            <button class="boton gmail">Subscribete</button>
+            <button class="boton_gmail">Subscribete</button>
         </section>
-        <section class="tercer section ">
+        <section class="tercer">
         <img src="/images/logo_html.png" alt="logo_html">
         <h3>texto que va abajo del html </h3>
 
